fixed spacing issue in drop-down menu

--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ input {
   border-color: orange;
   width: 100%; /* Adjusted to take up the entire width of its container */
   height: 40px;
+  text-indent: 5px;
 }
 
 ul {
@@ -47,9 +48,10 @@ ul li {
   list-style-type: none;
   text-indent: 5px;
   height: 40px;
-  display: flex;
-  align-items: center; /* Vertically center the content */
+  align-items: center;
+  flex-direction: row;
   white-space: nowrap; /* Prevent line breaks within the li */
+  line-height: 40px;
 
 
 }
